---
source: src/checker/operation_checker/tests/mod.rs
expression: "check_operation_document(&schema, &doc)"
---
[
    CheckError {
        position: Pos {
            line: 4,
            column: 16,
            file: 0,
            builtin: false,
        },
        message: FieldNotFound {
            field_name: "user2",
            type_name: "Query",
        },
        additional_info: [
            (
                Pos {
                    line: 1,
                    column: 12,
                    file: 0,
                    builtin: false,
                },
                DefinitionPos {
                    name: "Query",
                },
            ),
        ],
    },
]
